--- a/jenkinsfile
+++ b/jenkinsfile
@@ -11,11 +11,11 @@ pipeline {
         stage("build") {
             steps {
                 echo "build"
-                echo " - 1: bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe test1.py'"
-                bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe test1.py'
-                echo " - 2: aaaaaaaaaaa"
+                echo " - 1: bat 'python test1.py'"
+                bat 'python test1.py'
+                echo " - 2: bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test1.py'"
                 bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test1.py'
-                echo " - 3: bbbbbbbbb"
+                echo " - 3: Final"
             }
         }
     }
