--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,19 +10,21 @@ pipeline {
         
         stage("build") {
             steps {
-                echo "Enter build 1"
+                echo "Enter build"
 
                 echo " - : bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test1.py'"
                 bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test1.py'
-                echo "Exit  build 1"
+                echo "Exit  build"
             }
+        }
 
+        stage("test") {
             steps {
-                echo "Enter build 2"
+                echo "Enter test"
 
                 echo " - : bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test2.py'"
                 bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test2.py'
-                echo "Exit  build 2"
+                echo "Exit  test"
             }
         }
     }
