--- a/jenkinsfile
+++ b/jenkinsfile
@@ -25,7 +25,9 @@ pipeline {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter test"
                 echo " - : bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test1.py'"
                 bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test1.py'
+            }
 
+            steps {
                 echo " - : bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test2.py'"
                 bat 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe ./test2.py'
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  test"
