--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,13 +1,18 @@
 pipeline {
     agent any
 
+    environment {
+        GITHUB = 'https://github.com/ErikJ-hub/test.git'
+        DB    = 'sqlite'
+    }
+
      stages {
         stage("git") {
             steps {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter Git"
-                echo ${YOUR_JENKINS_URL}
-                echo "Git: https://github.com/ErikJ-hub/test.git"
-                git 'https://github.com/ErikJ-hub/test.git'
+                echo "Git: ${GITHUB}"
+                git ${GITHUB}
+                // git 'https://github.com/ErikJ-hub/test.git'
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  Git"
             }
         }
