--- a/jenkinsfile
+++ b/jenkinsfile
@@ -41,7 +41,7 @@ pipeline {
     post { 
         always { 
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter always"
-                more ./test.log
+                # more ./test.log
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  always"
         }
         
