--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,6 +31,8 @@ pipeline {
                 echo " - : '${PYTHON} ./test1.py'"
                 bat "${PYTHON} ./test1.py"
 
+                readFile 'test.log'
+
                 echo " - : '${PYTHON} ./test2.py'"
                 bat "${PYTHON} ./test2.py"
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  test"
