--- a/jenkinsfile
+++ b/jenkinsfile
@@ -71,7 +71,7 @@ pipeline {
 
         cleanup {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter cleanup"
-                readFile 'test.log'
+                bat label: '', script: 'more test.log'
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  cleanup"
         }
     }
