--- a/jenkinsfile
+++ b/jenkinsfile
@@ -10,8 +10,8 @@ pipeline {
         stage("git") {
             steps {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter Git"
-                echo "Git: ${GITHUB}"
-                git "${GITHUB}"
+                echo "Git: ${GIT_URL}"
+                git "${GIT_URL}"
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  Git"
             }
         }
