--- a/jenkinsfile
+++ b/jenkinsfile
@@ -71,7 +71,7 @@ pipeline {
 
         cleanup {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter cleanup"
-                bat label: '', script: 'more ${TEST_LOGFILE}'
+                bat label: '', script: more ${TEST_LOGFILE}
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  cleanup"
         }
     }
