--- a/jenkinsfile
+++ b/jenkinsfile
@@ -72,6 +72,8 @@ pipeline {
         cleanup {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter cleanup"
                 bat label: '', script: 'more test.log'
+                bat label: '', script: 'more ${TEST_LOGFILE}'
+                bat label: '', script: "more ${TEST_LOGFILE}"
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  cleanup"
         }
     }
