--- a/jenkinsfile
+++ b/jenkinsfile
@@ -72,7 +72,7 @@ pipeline {
         cleanup {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter cleanup"
                 bat label: '', script: 'more test.log'
-                bat label: '', script: 'more ${TEST_LOGFILE}'
+                // bat label: '', script: 'more ${TEST_LOGFILE}'
                 bat label: '', script: "more ${TEST_LOGFILE}"
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  cleanup"
         }
