--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
 
     environment {
         PYTHON = 'C:/Users/erik/AppData/Local/Programs/Python/Python37/python.exe'
-#        TEST_LOGFILE = 'test.log'
+/*        TEST_LOGFILE = 'test.log' */
     }
 
      stages {
