--- a/jenkinsfile
+++ b/jenkinsfile
@@ -84,7 +84,8 @@ pipeline {
 
         cleanup {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter cleanup"
-                bat label: '', script: "more ${TEST_LOGFILE}"
+/*                bat label: '', script: "more ${TEST_LOGFILE}"  */
+                bat label: '', script: "more TEST_LOGFILE"
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  cleanup"
         }
     }
