--- a/jenkinsfile
+++ b/jenkinsfile
@@ -85,7 +85,7 @@ pipeline {
         cleanup {
                 echo "#+#+#+#+#+#+#+#+#+#+#+#+# Enter cleanup"
 /*                bat label: '', script: "more ${TEST_LOGFILE}"  */
-                bat label: '', script: "more TEST_LOGFILE"
+                bat label: '', script: "more params.TEST_LOGFILE"
                 echo "#-#-#-#-#-#-#-#-#-#-#-#-# Exit  cleanup"
         }
     }
